--- a/entrega.ipynb
+++ b/entrega.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -26,22 +26,14 @@
      ]
     },
     {
-     "ename": "TypeError",
-     "evalue": "'cv2.VideoCapture' object does not support item assignment",
+     "ename": "ValueError",
+     "evalue": "could not broadcast input array from shape (149,150,3) into shape (136,150,3)",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\thewi\\vc_practicas\\p4\\entrega4\\P4-Deteccion-de-caras\\entrega.ipynb Cell 2\u001b[0m line \u001b[0;36m5\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/thewi/vc_practicas/p4/entrega4/P4-Deteccion-de-caras/entrega.ipynb#W1sZmlsZQ%3D%3D?line=56'>57</a>\u001b[0m     cv2\u001b[39m.\u001b[39mcircle(frame, (x, y), \u001b[39m2\u001b[39m, (\u001b[39m255\u001b[39m, \u001b[39m255\u001b[39m, \u001b[39m255\u001b[39m), \u001b[39m-\u001b[39m\u001b[39m1\u001b[39m)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/thewi/vc_practicas/p4/entrega4/P4-Deteccion-de-caras/entrega.ipynb#W1sZmlsZQ%3D%3D?line=57'>58</a>\u001b[0m     strawhat \u001b[39m=\u001b[39m cv2\u001b[39m.\u001b[39mresize(strawhat, (w,h))\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/thewi/vc_practicas/p4/entrega4/P4-Deteccion-de-caras/entrega.ipynb#W1sZmlsZQ%3D%3D?line=58'>59</a>\u001b[0m     cap[y:y\u001b[39m+\u001b[39;49mh, x:x\u001b[39m+\u001b[39;49mw] \u001b[39m=\u001b[39m strawhat\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/thewi/vc_practicas/p4/entrega4/P4-Deteccion-de-caras/entrega.ipynb#W1sZmlsZQ%3D%3D?line=60'>61</a>\u001b[0m cv2\u001b[39m.\u001b[39mcircle(frame, ((\u001b[39mint\u001b[39m)(lex), (\u001b[39mint\u001b[39m)(ley)), \u001b[39m4\u001b[39m, (\u001b[39m0\u001b[39m, \u001b[39m0\u001b[39m, \u001b[39m255\u001b[39m), \u001b[39m-\u001b[39m\u001b[39m1\u001b[39m)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/thewi/vc_practicas/p4/entrega4/P4-Deteccion-de-caras/entrega.ipynb#W1sZmlsZQ%3D%3D?line=61'>62</a>\u001b[0m cv2\u001b[39m.\u001b[39mcircle(frame, ((\u001b[39mint\u001b[39m)(rex), (\u001b[39mint\u001b[39m)(rey)), \u001b[39m4\u001b[39m, (\u001b[39m0\u001b[39m, \u001b[39m255\u001b[39m, \u001b[39m0\u001b[39m), \u001b[39m-\u001b[39m\u001b[39m1\u001b[39m)\n",
-      "\u001b[1;31mTypeError\u001b[0m: 'cv2.VideoCapture' object does not support item assignment"
-     ]
-    },
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\thewi\\vc_practicas\\p4\\entrega4\\P4-Deteccion-de-caras\\entrega.ipynb Cell 2\u001b[0m line \u001b[0;36m5\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/thewi/vc_practicas/p4/entrega4/P4-Deteccion-de-caras/entrega.ipynb#W1sZmlsZQ%3D%3D?line=52'>53</a>\u001b[0m strawhat \u001b[39m=\u001b[39m cv2\u001b[39m.\u001b[39mresize(strawhat, (w, h))\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/thewi/vc_practicas/p4/entrega4/P4-Deteccion-de-caras/entrega.ipynb#W1sZmlsZQ%3D%3D?line=53'>54</a>\u001b[0m \u001b[39m# Overlay the hat image on top of the face\u001b[39;00m\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/thewi/vc_practicas/p4/entrega4/P4-Deteccion-de-caras/entrega.ipynb#W1sZmlsZQ%3D%3D?line=54'>55</a>\u001b[0m frame[hat_y:hat_y\u001b[39m+\u001b[39;49mh, hat_x:hat_x\u001b[39m+\u001b[39;49mw] \u001b[39m=\u001b[39m strawhat\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/thewi/vc_practicas/p4/entrega4/P4-Deteccion-de-caras/entrega.ipynb#W1sZmlsZQ%3D%3D?line=56'>57</a>\u001b[0m \u001b[39m# draws eyes and mask if available\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/thewi/vc_practicas/p4/entrega4/P4-Deteccion-de-caras/entrega.ipynb#W1sZmlsZQ%3D%3D?line=57'>58</a>\u001b[0m [lex, ley, rex, rey] \u001b[39m=\u001b[39m eyes\n",
+      "\u001b[1;31mValueError\u001b[0m: could not broadcast input array from shape (149,150,3) into shape (136,150,3)"
      ]
     }
    ],
@@ -55,7 +47,8 @@
     "font = cv2.FONT_HERSHEY_SIMPLEX\n",
     "\n",
     "# Images\n",
-    "strawhat = cv2.imread(\"media/strawhat.png\")\n",
+    "strawhat = cv2.imread(\"media/strawhat.png\", cv2.IMREAD_UNCHANGED)\n",
+    "\n",
     "\n",
     "# Webcam connection\n",
     "cap = cv2.VideoCapture(0)\n",
@@ -74,8 +67,6 @@
     "else:\n",
     "    print('Camera 0')\n",
     "\n",
-    "debug = 0\n",
-    "\n",
     "#Set camera resolution\n",
     "cap.set(3,640);\n",
     "cap.set(4,480);\n",
@@ -88,41 +79,24 @@
     "    B, G, R = cv2.split(frame)\n",
     "\n",
     "    # Search face with a specific setup for face and eye detection\n",
-    "    values = FDet.SingleFaceEyesDetection(frame, FDet.FaceDetectors[1], FDet.EyeDetectors[1])\n",
+    "    values = FDet.SingleFaceEyesDetection(frame, FDet.FaceDetectors[1], FDet.EyeDetectors[0])\n",
     "    if values is not None:\n",
     "        face, eyes, shape = values\n",
     "\n",
     "        #draws face container\n",
     "        [x, y , w, h] = face\n",
     "        if x > -1:\n",
-    "            cv2.rectangle(frame, (x, y), (x + w, y + h), (255, 0, 0), 2)\n",
+    "            hat_x = x  # You may need to adjust this depending on the desired hat placement\n",
+    "            hat_y = y  # You may need to adjust this depending on the desired hat placement\n",
+    "\n",
+    "            # Resize the hat image to match the width and height of the detected face\n",
+    "            strawhat = cv2.resize(strawhat, (w, h))\n",
+    "            # Overlay the hat image on top of the face\n",
+    "            frame[hat_y:hat_y+h, hat_x:hat_x+w] = strawhat\n",
     "\n",
     "            # draws eyes and mask if available\n",
     "            [lex, ley, rex, rey] = eyes\n",
-    "            if lex > -1:\n",
-    "                # Show detected facial elements\n",
-    "                for (x, y) in shape:\n",
-    "                    cv2.circle(frame, (x, y), 2, (255, 255, 255), -1)\n",
-    "                    strawhat = cv2.resize(strawhat, (w,h))\n",
-    "\n",
-    "                cv2.circle(frame, ((int)(lex), (int)(ley)), 4, (0, 0, 255), -1)\n",
-    "                cv2.circle(frame, ((int)(rex), (int)(rey)), 4, (0, 255, 0), -1)\n",
-    "\n",
-    "\n",
-    "                # Normalize and show\n",
-    "                # color channels\n",
-    "                normalizatorHS.normalize_gray_img(B, lex, ley, rex, rey, faceutils.Kind_wraping.HS)\n",
-    "                Bnorm = normalizatorHS.normf_image\n",
-    "                normalizatorHS.normalize_gray_img(G, lex, ley, rex, rey, faceutils.Kind_wraping.HS)\n",
-    "                Gnorm = normalizatorHS.normf_image\n",
-    "                normalizatorHS.normalize_gray_img(R, lex, ley, rex, rey, faceutils.Kind_wraping.HS)\n",
-    "                Rnorm = normalizatorHS.normf_image\n",
-    "                NormBGR = cv2.merge((Bnorm, Gnorm, Rnorm))\n",
-    "                cv2.imshow(\"Normalized\", NormBGR)\n",
-    "\n",
-    "\n",
-    "    if debug:\n",
-    "        print(\"Processing time : {:.3f}\".format(time.time() - t))\n",
+    "                \n",
     "\n",
     "    # Show resulting image\n",
     "    cv2.putText(frame, FDet.FaceDetectors[1], (10, 20), font, 0.5, (255, 255, 255), 2, cv2.LINE_AA)\n",
