Added an image for the filter

--- a/entrega.ipynb
+++ b/entrega.ipynb
@@ -47,7 +47,7 @@
     "font = cv2.FONT_HERSHEY_SIMPLEX\n",
     "\n",
     "# Images\n",
-    "strawhat = cv2.imread(\"media/strawhat.png\", cv2.IMREAD_UNCHANGED)\n",
+    "strawhat = cv2.imread(\"media/strawhat2.png\", cv2.IMREAD_UNCHANGED)\n",
     "\n",
     "\n",
     "# Webcam connection\n",
