--- a/entrega.ipynb
+++ b/entrega.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -27,13 +27,13 @@
     },
     {
      "ename": "ValueError",
-     "evalue": "could not broadcast input array from shape (149,150,3) into shape (136,150,3)",
+     "evalue": "not enough values to unpack (expected 2, got 0)",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\thewi\\vc_practicas\\p4\\entrega4\\P4-Deteccion-de-caras\\entrega.ipynb Cell 2\u001b[0m line \u001b[0;36m5\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/thewi/vc_practicas/p4/entrega4/P4-Deteccion-de-caras/entrega.ipynb#W1sZmlsZQ%3D%3D?line=52'>53</a>\u001b[0m strawhat \u001b[39m=\u001b[39m cv2\u001b[39m.\u001b[39mresize(strawhat, (w, h))\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/thewi/vc_practicas/p4/entrega4/P4-Deteccion-de-caras/entrega.ipynb#W1sZmlsZQ%3D%3D?line=53'>54</a>\u001b[0m \u001b[39m# Overlay the hat image on top of the face\u001b[39;00m\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/thewi/vc_practicas/p4/entrega4/P4-Deteccion-de-caras/entrega.ipynb#W1sZmlsZQ%3D%3D?line=54'>55</a>\u001b[0m frame[hat_y:hat_y\u001b[39m+\u001b[39;49mh, hat_x:hat_x\u001b[39m+\u001b[39;49mw] \u001b[39m=\u001b[39m strawhat\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/thewi/vc_practicas/p4/entrega4/P4-Deteccion-de-caras/entrega.ipynb#W1sZmlsZQ%3D%3D?line=56'>57</a>\u001b[0m \u001b[39m# draws eyes and mask if available\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/thewi/vc_practicas/p4/entrega4/P4-Deteccion-de-caras/entrega.ipynb#W1sZmlsZQ%3D%3D?line=57'>58</a>\u001b[0m [lex, ley, rex, rey] \u001b[39m=\u001b[39m eyes\n",
-      "\u001b[1;31mValueError\u001b[0m: could not broadcast input array from shape (149,150,3) into shape (136,150,3)"
+      "\u001b[1;32md:\\Users\\Eduardo Etopa\\Desktop\\uni\\primer cuatri\\VC\\p4\\P4-Deteccion-de-caras\\entrega.ipynb Cell 2\u001b[0m line \u001b[0;36m6\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/Users/Eduardo%20Etopa/Desktop/uni/primer%20cuatri/VC/p4/P4-Deteccion-de-caras/entrega.ipynb#W1sZmlsZQ%3D%3D?line=62'>63</a>\u001b[0m     face, eyes, shape \u001b[39m=\u001b[39m values\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/Users/Eduardo%20Etopa/Desktop/uni/primer%20cuatri/VC/p4/P4-Deteccion-de-caras/entrega.ipynb#W1sZmlsZQ%3D%3D?line=64'>65</a>\u001b[0m \u001b[39m#draws face container\u001b[39;00m\n\u001b[1;32m---> <a href='vscode-notebook-cell:/d%3A/Users/Eduardo%20Etopa/Desktop/uni/primer%20cuatri/VC/p4/P4-Deteccion-de-caras/entrega.ipynb#W1sZmlsZQ%3D%3D?line=65'>66</a>\u001b[0m [x, y ] \u001b[39m=\u001b[39m eyes\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/Users/Eduardo%20Etopa/Desktop/uni/primer%20cuatri/VC/p4/P4-Deteccion-de-caras/entrega.ipynb#W1sZmlsZQ%3D%3D?line=66'>67</a>\u001b[0m \u001b[39m#[x, y , w, h] = eyes[2]\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/Users/Eduardo%20Etopa/Desktop/uni/primer%20cuatri/VC/p4/P4-Deteccion-de-caras/entrega.ipynb#W1sZmlsZQ%3D%3D?line=68'>69</a>\u001b[0m \u001b[39mif\u001b[39;00m x \u001b[39m>\u001b[39m \u001b[39m-\u001b[39m\u001b[39m1\u001b[39m:\n",
+      "\u001b[1;31mValueError\u001b[0m: not enough values to unpack (expected 2, got 0)"
      ]
     }
    ],
@@ -80,6 +80,7 @@
     "\n",
     "    # Search face with a specific setup for face and eye detection\n",
     "    values = FDet.SingleFaceEyesDetection(frame, FDet.FaceDetectors[1], FDet.EyeDetectors[0])\n",
+    "    '''\n",
     "    if values is not None:\n",
     "        face, eyes, shape = values\n",
     "\n",
@@ -96,6 +97,28 @@
     "\n",
     "            # draws eyes and mask if available\n",
     "            [lex, ley, rex, rey] = eyes\n",
+    "    '''\n",
+    "\n",
+    "    if values is not None:\n",
+    "        face, eyes, shape = values\n",
+    "\n",
+    "    #draws face container\n",
+    "    [x, y, w, h] = eyes\n",
+    "    #[x, y , w, h] = eyes[2]\n",
+    "    left_eye = frame[(int)(ley) - 20:(int)(ley) + 20, (int)(lex) - 20:(int)(lex) + 20]\n",
+    "    right_eye = frame[(int)(rey) - 20:(int)(rey) + 20, (int)(rex) - 20:(int)(rex) + 20]  \n",
+    "\n",
+    "    if x > -1:\n",
+    "        hat_x = x + 10  # You may need to adjust this depending on the desired hat placement\n",
+    "        hat_y = y - 20  # You may need to adjust this depending on the desired hat placement\n",
+    "\n",
+    "        # Resize the hat image to match the width and height of the detected face\n",
+    "        #strawhat = cv2.resize(strawhat, (w, h))\n",
+    "        # Overlay the hat image on top of the face\n",
+    "        frame[hat_y:hat_y+h, hat_x:hat_x+w] = strawhat\n",
+    "\n",
+    "        # draws eyes and mask if available\n",
+    "        [lex, ley, rex, rey] = eyes\n",
     "                \n",
     "\n",
     "    # Show resulting image\n",
