--- a/entrega.ipynb
+++ b/entrega.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -27,13 +27,13 @@
     },
     {
      "ename": "ValueError",
-     "evalue": "not enough values to unpack (expected 2, got 0)",
+     "evalue": "not enough values to unpack (expected 4, got 0)",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32md:\\Users\\Eduardo Etopa\\Desktop\\uni\\primer cuatri\\VC\\p4\\P4-Deteccion-de-caras\\entrega.ipynb Cell 2\u001b[0m line \u001b[0;36m6\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/Users/Eduardo%20Etopa/Desktop/uni/primer%20cuatri/VC/p4/P4-Deteccion-de-caras/entrega.ipynb#W1sZmlsZQ%3D%3D?line=62'>63</a>\u001b[0m     face, eyes, shape \u001b[39m=\u001b[39m values\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/Users/Eduardo%20Etopa/Desktop/uni/primer%20cuatri/VC/p4/P4-Deteccion-de-caras/entrega.ipynb#W1sZmlsZQ%3D%3D?line=64'>65</a>\u001b[0m \u001b[39m#draws face container\u001b[39;00m\n\u001b[1;32m---> <a href='vscode-notebook-cell:/d%3A/Users/Eduardo%20Etopa/Desktop/uni/primer%20cuatri/VC/p4/P4-Deteccion-de-caras/entrega.ipynb#W1sZmlsZQ%3D%3D?line=65'>66</a>\u001b[0m [x, y ] \u001b[39m=\u001b[39m eyes\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/Users/Eduardo%20Etopa/Desktop/uni/primer%20cuatri/VC/p4/P4-Deteccion-de-caras/entrega.ipynb#W1sZmlsZQ%3D%3D?line=66'>67</a>\u001b[0m \u001b[39m#[x, y , w, h] = eyes[2]\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/Users/Eduardo%20Etopa/Desktop/uni/primer%20cuatri/VC/p4/P4-Deteccion-de-caras/entrega.ipynb#W1sZmlsZQ%3D%3D?line=68'>69</a>\u001b[0m \u001b[39mif\u001b[39;00m x \u001b[39m>\u001b[39m \u001b[39m-\u001b[39m\u001b[39m1\u001b[39m:\n",
-      "\u001b[1;31mValueError\u001b[0m: not enough values to unpack (expected 2, got 0)"
+      "\u001b[1;32md:\\Users\\Eduardo Etopa\\Desktop\\uni\\primer cuatri\\VC\\p4\\P4-Deteccion-de-caras\\entrega.ipynb Cell 2\u001b[0m line \u001b[0;36m6\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/Users/Eduardo%20Etopa/Desktop/uni/primer%20cuatri/VC/p4/P4-Deteccion-de-caras/entrega.ipynb#W1sZmlsZQ%3D%3D?line=62'>63</a>\u001b[0m     face, eyes, shape \u001b[39m=\u001b[39m values\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/Users/Eduardo%20Etopa/Desktop/uni/primer%20cuatri/VC/p4/P4-Deteccion-de-caras/entrega.ipynb#W1sZmlsZQ%3D%3D?line=64'>65</a>\u001b[0m \u001b[39m#draws face container\u001b[39;00m\n\u001b[1;32m---> <a href='vscode-notebook-cell:/d%3A/Users/Eduardo%20Etopa/Desktop/uni/primer%20cuatri/VC/p4/P4-Deteccion-de-caras/entrega.ipynb#W1sZmlsZQ%3D%3D?line=65'>66</a>\u001b[0m [x, y, w, h] \u001b[39m=\u001b[39m eyes\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/Users/Eduardo%20Etopa/Desktop/uni/primer%20cuatri/VC/p4/P4-Deteccion-de-caras/entrega.ipynb#W1sZmlsZQ%3D%3D?line=66'>67</a>\u001b[0m \u001b[39m#[x, y , w, h] = eyes[2]\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/Users/Eduardo%20Etopa/Desktop/uni/primer%20cuatri/VC/p4/P4-Deteccion-de-caras/entrega.ipynb#W1sZmlsZQ%3D%3D?line=67'>68</a>\u001b[0m left_eye \u001b[39m=\u001b[39m frame[(\u001b[39mint\u001b[39m)(ley) \u001b[39m-\u001b[39m \u001b[39m30\u001b[39m:(\u001b[39mint\u001b[39m)(ley) \u001b[39m-\u001b[39m \u001b[39m10\u001b[39m, (\u001b[39mint\u001b[39m)(lex) \u001b[39m+\u001b[39m \u001b[39m10\u001b[39m:(\u001b[39mint\u001b[39m)(lex) \u001b[39m+\u001b[39m \u001b[39m40\u001b[39m]\n",
+      "\u001b[1;31mValueError\u001b[0m: not enough values to unpack (expected 4, got 0)"
      ]
     }
    ],
@@ -105,8 +105,10 @@
     "    #draws face container\n",
     "    [x, y, w, h] = eyes\n",
     "    #[x, y , w, h] = eyes[2]\n",
-    "    left_eye = frame[(int)(ley) - 20:(int)(ley) + 20, (int)(lex) - 20:(int)(lex) + 20]\n",
+    "    left_eye = frame[(int)(ley) - 30:(int)(ley) - 10, (int)(lex) + 10:(int)(lex) + 40]\n",
     "    right_eye = frame[(int)(rey) - 20:(int)(rey) + 20, (int)(rex) - 20:(int)(rex) + 20]  \n",
+    "\n",
+    "\n",
     "\n",
     "    if x > -1:\n",
     "        hat_x = x + 10  # You may need to adjust this depending on the desired hat placement\n",
@@ -115,6 +117,7 @@
     "        # Resize the hat image to match the width and height of the detected face\n",
     "        #strawhat = cv2.resize(strawhat, (w, h))\n",
     "        # Overlay the hat image on top of the face\n",
+    "        frame[(int)(ley) - 30:(int)(ley) - 10, (int)(lex) + 10:(int)(lex) + 40] = strawhat\n",
     "        frame[hat_y:hat_y+h, hat_x:hat_x+w] = strawhat\n",
     "\n",
     "        # draws eyes and mask if available\n",
