--- a/entrega.ipynb
+++ b/entrega.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -27,17 +27,19 @@
     },
     {
      "ename": "ValueError",
-     "evalue": "not enough values to unpack (expected 4, got 0)",
+     "evalue": "could not broadcast input array from shape (60,100,4) into shape (60,100,3)",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32md:\\Users\\Eduardo Etopa\\Desktop\\uni\\primer cuatri\\VC\\p4\\P4-Deteccion-de-caras\\entrega.ipynb Cell 2\u001b[0m line \u001b[0;36m6\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/Users/Eduardo%20Etopa/Desktop/uni/primer%20cuatri/VC/p4/P4-Deteccion-de-caras/entrega.ipynb#W1sZmlsZQ%3D%3D?line=62'>63</a>\u001b[0m     face, eyes, shape \u001b[39m=\u001b[39m values\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/Users/Eduardo%20Etopa/Desktop/uni/primer%20cuatri/VC/p4/P4-Deteccion-de-caras/entrega.ipynb#W1sZmlsZQ%3D%3D?line=64'>65</a>\u001b[0m \u001b[39m#draws face container\u001b[39;00m\n\u001b[1;32m---> <a href='vscode-notebook-cell:/d%3A/Users/Eduardo%20Etopa/Desktop/uni/primer%20cuatri/VC/p4/P4-Deteccion-de-caras/entrega.ipynb#W1sZmlsZQ%3D%3D?line=65'>66</a>\u001b[0m [x, y, w, h] \u001b[39m=\u001b[39m eyes\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/Users/Eduardo%20Etopa/Desktop/uni/primer%20cuatri/VC/p4/P4-Deteccion-de-caras/entrega.ipynb#W1sZmlsZQ%3D%3D?line=66'>67</a>\u001b[0m \u001b[39m#[x, y , w, h] = eyes[2]\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/Users/Eduardo%20Etopa/Desktop/uni/primer%20cuatri/VC/p4/P4-Deteccion-de-caras/entrega.ipynb#W1sZmlsZQ%3D%3D?line=67'>68</a>\u001b[0m left_eye \u001b[39m=\u001b[39m frame[(\u001b[39mint\u001b[39m)(ley) \u001b[39m-\u001b[39m \u001b[39m30\u001b[39m:(\u001b[39mint\u001b[39m)(ley) \u001b[39m-\u001b[39m \u001b[39m10\u001b[39m, (\u001b[39mint\u001b[39m)(lex) \u001b[39m+\u001b[39m \u001b[39m10\u001b[39m:(\u001b[39mint\u001b[39m)(lex) \u001b[39m+\u001b[39m \u001b[39m40\u001b[39m]\n",
-      "\u001b[1;31mValueError\u001b[0m: not enough values to unpack (expected 4, got 0)"
+      "\u001b[1;32md:\\Users\\Eduardo Etopa\\Desktop\\uni\\primer cuatri\\VC\\p4\\P4-Deteccion-de-caras\\entrega.ipynb Cell 2\u001b[0m line \u001b[0;36m1\n\u001b[0;32m    <a href='vscode-notebook-cell:/d%3A/Users/Eduardo%20Etopa/Desktop/uni/primer%20cuatri/VC/p4/P4-Deteccion-de-caras/entrega.ipynb#W1sZmlsZQ%3D%3D?line=138'>139</a>\u001b[0m         bandana_bgr \u001b[39m=\u001b[39m bandana[:, :, :\u001b[39m3\u001b[39m]\n\u001b[0;32m    <a href='vscode-notebook-cell:/d%3A/Users/Eduardo%20Etopa/Desktop/uni/primer%20cuatri/VC/p4/P4-Deteccion-de-caras/entrega.ipynb#W1sZmlsZQ%3D%3D?line=139'>140</a>\u001b[0m         bandana_with_alpha \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mconcatenate((bandana_bgr, alpha_channel_bgr), axis\u001b[39m=\u001b[39m\u001b[39m2\u001b[39m)\n\u001b[1;32m--> <a href='vscode-notebook-cell:/d%3A/Users/Eduardo%20Etopa/Desktop/uni/primer%20cuatri/VC/p4/P4-Deteccion-de-caras/entrega.ipynb#W1sZmlsZQ%3D%3D?line=142'>143</a>\u001b[0m         frame[front_position[\u001b[39m1\u001b[39m]\u001b[39m-\u001b[39m\u001b[39m70\u001b[39m:front_position[\u001b[39m1\u001b[39m]\u001b[39m-\u001b[39m\u001b[39m10\u001b[39m, front_position[\u001b[39m0\u001b[39m]\u001b[39m-\u001b[39m\u001b[39m50\u001b[39m:front_position[\u001b[39m0\u001b[39m]\u001b[39m+\u001b[39m\u001b[39m50\u001b[39m] \u001b[39m=\u001b[39m bandana\n\u001b[0;32m    <a href='vscode-notebook-cell:/d%3A/Users/Eduardo%20Etopa/Desktop/uni/primer%20cuatri/VC/p4/P4-Deteccion-de-caras/entrega.ipynb#W1sZmlsZQ%3D%3D?line=145'>146</a>\u001b[0m cv2\u001b[39m.\u001b[39mimshow(\u001b[39m'\u001b[39m\u001b[39mCam\u001b[39m\u001b[39m'\u001b[39m, frame)\n\u001b[0;32m    <a href='vscode-notebook-cell:/d%3A/Users/Eduardo%20Etopa/Desktop/uni/primer%20cuatri/VC/p4/P4-Deteccion-de-caras/entrega.ipynb#W1sZmlsZQ%3D%3D?line=147'>148</a>\u001b[0m \u001b[39m# Esc to finish\u001b[39;00m\n",
+      "\u001b[1;31mValueError\u001b[0m: could not broadcast input array from shape (60,100,4) into shape (60,100,3)"
      ]
     }
    ],
    "source": [
+    "\n",
+    "\n",
     "normalizatorHS = faceutils.Normalization()\n",
     "\n",
     "# Face detectors interface\n",
@@ -47,7 +49,10 @@
     "font = cv2.FONT_HERSHEY_SIMPLEX\n",
     "\n",
     "# Images\n",
-    "strawhat = cv2.imread(\"media/strawhat2.png\", cv2.IMREAD_UNCHANGED)\n",
+    "sharingan = cv2.imread(\"media/sasuke_sharingan.png\", cv2.IMREAD_UNCHANGED)\n",
+    "rinnegan = cv2.imread(\"media/Rinnegan.png\", cv2.IMREAD_UNCHANGED)\n",
+    "bandana = cv2.imread(\"media/bandana.png\", cv2.IMREAD_UNCHANGED)\n",
+    "\n",
     "\n",
     "\n",
     "# Webcam connection\n",
@@ -71,62 +76,115 @@
     "cap.set(3,640);\n",
     "cap.set(4,480);\n",
     "\n",
+    "\n",
+    "\n",
     "while True:\n",
     "    # Get frame\n",
-    "    t = time.time()\n",
     "    ret, frame = cap.read()\n",
     "    # For HS normalization\n",
     "    B, G, R = cv2.split(frame)\n",
     "\n",
     "    # Search face with a specific setup for face and eye detection\n",
-    "    values = FDet.SingleFaceEyesDetection(frame, FDet.FaceDetectors[1], FDet.EyeDetectors[0])\n",
-    "    '''\n",
+    "    values = FDet.SingleFaceEyesDetection(frame, FDet.FaceDetectors[1], FDet.EyeDetectors[1])\n",
     "    if values is not None:\n",
+    "\n",
     "        face, eyes, shape = values\n",
     "\n",
     "        #draws face container\n",
     "        [x, y , w, h] = face\n",
     "        if x > -1:\n",
-    "            hat_x = x  # You may need to adjust this depending on the desired hat placement\n",
-    "            hat_y = y  # You may need to adjust this depending on the desired hat placement\n",
     "\n",
-    "            # Resize the hat image to match the width and height of the detected face\n",
-    "            strawhat = cv2.resize(strawhat, (w, h))\n",
-    "            # Overlay the hat image on top of the face\n",
-    "            frame[hat_y:hat_y+h, hat_x:hat_x+w] = strawhat\n",
+    "            cv2.rectangle(frame, (x, y), (x + w, y + h), (255, 0, 0), 2)\n",
     "\n",
     "            # draws eyes and mask if available\n",
     "            [lex, ley, rex, rey] = eyes\n",
-    "    '''\n",
     "\n",
-    "    if values is not None:\n",
-    "        face, eyes, shape = values\n",
+    "            left_eye = frame[(int)(ley) - 20:(int)(ley) + 20, (int)(lex) - 20:(int)(lex) + 20].copy()\n",
+    "            \n",
+    "            \n",
+    "            sharingan = cv2.resize(sharingan, (40, 40))\n",
     "\n",
-    "    #draws face container\n",
-    "    [x, y, w, h] = eyes\n",
-    "    #[x, y , w, h] = eyes[2]\n",
-    "    left_eye = frame[(int)(ley) - 30:(int)(ley) - 10, (int)(lex) + 10:(int)(lex) + 40]\n",
-    "    right_eye = frame[(int)(rey) - 20:(int)(rey) + 20, (int)(rex) - 20:(int)(rex) + 20]  \n",
+    "            # Extract alpha channel from sharingan\n",
+    "            alpha_channel = sharingan[:, :, 3]\n",
+    "\n",
+    "            # Resize alpha channel to match the resized sharingan\n",
+    "            alpha_channel_resized = cv2.resize(alpha_channel, (40, 40))\n",
+    "\n",
+    "            # Convert alpha channel to 3 channels\n",
+    "            alpha_channel_bgr = cv2.cvtColor(alpha_channel_resized, cv2.COLOR_GRAY2BGR)\n",
+    "\n",
+    "            # Combine resized sharingan and alpha channel\n",
+    "            sharingan_bgr = sharingan[:, :, :3]\n",
+    "            sharingan_with_alpha = np.concatenate((sharingan_bgr, alpha_channel_bgr), axis=2)\n",
+    "\n",
+    "            # Overlay sharingan on the frame\n",
+    "            frame[(int)(ley) - 20:(int)(ley) + 20, (int)(lex) - 20:(int)(lex) + 20] = \\\n",
+    "                frame[(int)(ley) - 20:(int)(ley) + 20, (int)(lex) - 20:(int)(lex) + 20] * \\\n",
+    "                (1 - sharingan_with_alpha[:, :, 3:] / 255.0) + \\\n",
+    "                sharingan_with_alpha[:, :, :3] * (sharingan_with_alpha[:, :, 3:] / 255.0)\n",
     "\n",
     "\n",
+    "            \n",
+    "            rinnegan = cv2.resize(rinnegan, (40, 40))\n",
+    "            # Extract alpha channel from sharingan\n",
+    "            alpha_channel = rinnegan[:, :, 3]\n",
     "\n",
-    "    if x > -1:\n",
-    "        hat_x = x + 10  # You may need to adjust this depending on the desired hat placement\n",
-    "        hat_y = y - 20  # You may need to adjust this depending on the desired hat placement\n",
+    "            # Resize alpha channel to match the resized strawhat\n",
+    "            alpha_channel_resized = cv2.resize(alpha_channel, (40, 40))\n",
     "\n",
-    "        # Resize the hat image to match the width and height of the detected face\n",
-    "        #strawhat = cv2.resize(strawhat, (w, h))\n",
-    "        # Overlay the hat image on top of the face\n",
-    "        frame[(int)(ley) - 30:(int)(ley) - 10, (int)(lex) + 10:(int)(lex) + 40] = strawhat\n",
-    "        frame[hat_y:hat_y+h, hat_x:hat_x+w] = strawhat\n",
+    "            # Convert alpha channel to 3 channels\n",
+    "            alpha_channel_bgr = cv2.cvtColor(alpha_channel_resized, cv2.COLOR_GRAY2BGR)\n",
     "\n",
-    "        # draws eyes and mask if available\n",
-    "        [lex, ley, rex, rey] = eyes\n",
-    "                \n",
+    "            # Combine resized strawhat and alpha channel\n",
+    "            rinnegan_bgr = rinnegan[:, :, :3]\n",
+    "            rinnegan_with_alpha = np.concatenate((rinnegan_bgr, alpha_channel_bgr), axis=2)\n",
     "\n",
-    "    # Show resulting image\n",
-    "    cv2.putText(frame, FDet.FaceDetectors[1], (10, 20), font, 0.5, (255, 255, 255), 2, cv2.LINE_AA)\n",
-    "    cv2.putText(frame, FDet.EyeDetectors[1], (50, 20), font, 0.5, (255, 255, 255), 2, cv2.LINE_AA)\n",
+    "            # Overlay strawhat on the frame\n",
+    "            frame[(int)(rey) - 20:(int)(rey) + 20, (int)(rex) - 20:(int)(rex) + 20] = \\\n",
+    "                frame[(int)(rey) - 20:(int)(rey) + 20, (int)(rex) - 20:(int)(rex) + 20] * \\\n",
+    "                (1 - rinnegan_with_alpha[:, :, 3:] / 255.0) + \\\n",
+    "                rinnegan_with_alpha[:, :, :3] * (rinnegan_with_alpha[:, :, 3:] / 255.0)\n",
+    "\n",
+    "\n",
+    "            \n",
+    "            #frame[(int)(ley) - 20:(int)(ley) + 20, (int)(lex) - 20:(int)(lex) + 20] = strawhat\n",
+    "            \n",
+    "\n",
+    "            mouth = []\n",
+    "            mouth_position = ()\n",
+    "            front = []\n",
+    "            front_position = ()\n",
+    "            \n",
+    "            i = 0\n",
+    "            for (x, y) in shape:\n",
+    "                if i == 66:\n",
+    "                    mouth_position = (x, y)\n",
+    "                    mouth = frame[y-30:y+30, x-50:x+50].copy()\n",
+    "                if i == 27:\n",
+    "                    front_position = (x, y)\n",
+    "                    front = frame[y-70:y-10, x-50:x+50].copy()\n",
+    "\n",
+    "                i +=1\n",
+    "\n",
+    "\n",
+    "            bandana = cv2.resize(bandana, (100, 60))\n",
+    "            # Extract alpha channel from sharingan\n",
+    "            alpha_channel = bandana[:, :, 3]\n",
+    "\n",
+    "            # Resize alpha channel to match the resized strawhat\n",
+    "            alpha_channel_resized = cv2.resize(alpha_channel, (100, 60))\n",
+    "\n",
+    "            # Convert alpha channel to 3 channels\n",
+    "            alpha_channel_bgr = cv2.cvtColor(alpha_channel_resized, cv2.COLOR_GRAY2BGR)\n",
+    "\n",
+    "            # Combine resized strawhat and alpha channel\n",
+    "            bandana_bgr = bandana[:, :, :3]\n",
+    "            bandana_with_alpha = np.concatenate((bandana_bgr, alpha_channel_bgr), axis=2)\n",
+    "\n",
+    "\n",
+    "            frame[front_position[1]-70:front_position[1]-10, front_position[0]-50:front_position[0]+50] = bandana\n",
+    "\n",
+    "            \n",
     "    cv2.imshow('Cam', frame)\n",
     "    \n",
     "    # Esc to finish\n",
@@ -134,9 +192,10 @@
     "    if tec & tec == 27:  # Esc\n",
     "        break\n",
     "\n",
-    "# Close windoews and release camera\n",
+    "# Close windows and release camera\n",
     "cap.release()\n",
-    "cv2.destroyAllWindows()"
+    "cv2.destroyAllWindows()\n",
+    "\n"
    ]
   }
  ],
