ahora si que si

--- a/entrega.ipynb
+++ b/entrega.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -23,17 +23,6 @@
      "output_type": "stream",
      "text": [
       "Camera 0\n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "could not broadcast input array from shape (60,100,4) into shape (60,100,3)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32md:\\Users\\Eduardo Etopa\\Desktop\\uni\\primer cuatri\\VC\\p4\\P4-Deteccion-de-caras\\entrega.ipynb Cell 2\u001b[0m line \u001b[0;36m1\n\u001b[0;32m    <a href='vscode-notebook-cell:/d%3A/Users/Eduardo%20Etopa/Desktop/uni/primer%20cuatri/VC/p4/P4-Deteccion-de-caras/entrega.ipynb#W1sZmlsZQ%3D%3D?line=138'>139</a>\u001b[0m         bandana_bgr \u001b[39m=\u001b[39m bandana[:, :, :\u001b[39m3\u001b[39m]\n\u001b[0;32m    <a href='vscode-notebook-cell:/d%3A/Users/Eduardo%20Etopa/Desktop/uni/primer%20cuatri/VC/p4/P4-Deteccion-de-caras/entrega.ipynb#W1sZmlsZQ%3D%3D?line=139'>140</a>\u001b[0m         bandana_with_alpha \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mconcatenate((bandana_bgr, alpha_channel_bgr), axis\u001b[39m=\u001b[39m\u001b[39m2\u001b[39m)\n\u001b[1;32m--> <a href='vscode-notebook-cell:/d%3A/Users/Eduardo%20Etopa/Desktop/uni/primer%20cuatri/VC/p4/P4-Deteccion-de-caras/entrega.ipynb#W1sZmlsZQ%3D%3D?line=142'>143</a>\u001b[0m         frame[front_position[\u001b[39m1\u001b[39m]\u001b[39m-\u001b[39m\u001b[39m70\u001b[39m:front_position[\u001b[39m1\u001b[39m]\u001b[39m-\u001b[39m\u001b[39m10\u001b[39m, front_position[\u001b[39m0\u001b[39m]\u001b[39m-\u001b[39m\u001b[39m50\u001b[39m:front_position[\u001b[39m0\u001b[39m]\u001b[39m+\u001b[39m\u001b[39m50\u001b[39m] \u001b[39m=\u001b[39m bandana\n\u001b[0;32m    <a href='vscode-notebook-cell:/d%3A/Users/Eduardo%20Etopa/Desktop/uni/primer%20cuatri/VC/p4/P4-Deteccion-de-caras/entrega.ipynb#W1sZmlsZQ%3D%3D?line=145'>146</a>\u001b[0m cv2\u001b[39m.\u001b[39mimshow(\u001b[39m'\u001b[39m\u001b[39mCam\u001b[39m\u001b[39m'\u001b[39m, frame)\n\u001b[0;32m    <a href='vscode-notebook-cell:/d%3A/Users/Eduardo%20Etopa/Desktop/uni/primer%20cuatri/VC/p4/P4-Deteccion-de-caras/entrega.ipynb#W1sZmlsZQ%3D%3D?line=147'>148</a>\u001b[0m \u001b[39m# Esc to finish\u001b[39;00m\n",
-      "\u001b[1;31mValueError\u001b[0m: could not broadcast input array from shape (60,100,4) into shape (60,100,3)"
      ]
     }
    ],
@@ -102,13 +91,13 @@
     "            left_eye = frame[(int)(ley) - 20:(int)(ley) + 20, (int)(lex) - 20:(int)(lex) + 20].copy()\n",
     "            \n",
     "            \n",
-    "            sharingan = cv2.resize(sharingan, (40, 40))\n",
+    "            sharingan = cv2.resize(sharingan, (20, 20))\n",
     "\n",
     "            # Extract alpha channel from sharingan\n",
     "            alpha_channel = sharingan[:, :, 3]\n",
     "\n",
     "            # Resize alpha channel to match the resized sharingan\n",
-    "            alpha_channel_resized = cv2.resize(alpha_channel, (40, 40))\n",
+    "            alpha_channel_resized = cv2.resize(alpha_channel, (20, 20))\n",
     "\n",
     "            # Convert alpha channel to 3 channels\n",
     "            alpha_channel_bgr = cv2.cvtColor(alpha_channel_resized, cv2.COLOR_GRAY2BGR)\n",
@@ -118,19 +107,19 @@
     "            sharingan_with_alpha = np.concatenate((sharingan_bgr, alpha_channel_bgr), axis=2)\n",
     "\n",
     "            # Overlay sharingan on the frame\n",
-    "            frame[(int)(ley) - 20:(int)(ley) + 20, (int)(lex) - 20:(int)(lex) + 20] = \\\n",
-    "                frame[(int)(ley) - 20:(int)(ley) + 20, (int)(lex) - 20:(int)(lex) + 20] * \\\n",
+    "            frame[(int)(ley) - 10:(int)(ley) + 10, (int)(lex) - 10:(int)(lex) + 10] = \\\n",
+    "                frame[(int)(ley) - 10:(int)(ley) + 10, (int)(lex) - 10:(int)(lex) + 10] * \\\n",
     "                (1 - sharingan_with_alpha[:, :, 3:] / 255.0) + \\\n",
     "                sharingan_with_alpha[:, :, :3] * (sharingan_with_alpha[:, :, 3:] / 255.0)\n",
     "\n",
     "\n",
     "            \n",
-    "            rinnegan = cv2.resize(rinnegan, (40, 40))\n",
+    "            rinnegan = cv2.resize(rinnegan, (20, 20))\n",
     "            # Extract alpha channel from sharingan\n",
     "            alpha_channel = rinnegan[:, :, 3]\n",
     "\n",
     "            # Resize alpha channel to match the resized strawhat\n",
-    "            alpha_channel_resized = cv2.resize(alpha_channel, (40, 40))\n",
+    "            alpha_channel_resized = cv2.resize(alpha_channel, (20, 20))\n",
     "\n",
     "            # Convert alpha channel to 3 channels\n",
     "            alpha_channel_bgr = cv2.cvtColor(alpha_channel_resized, cv2.COLOR_GRAY2BGR)\n",
@@ -140,8 +129,8 @@
     "            rinnegan_with_alpha = np.concatenate((rinnegan_bgr, alpha_channel_bgr), axis=2)\n",
     "\n",
     "            # Overlay strawhat on the frame\n",
-    "            frame[(int)(rey) - 20:(int)(rey) + 20, (int)(rex) - 20:(int)(rex) + 20] = \\\n",
-    "                frame[(int)(rey) - 20:(int)(rey) + 20, (int)(rex) - 20:(int)(rex) + 20] * \\\n",
+    "            frame[(int)(rey) - 10:(int)(rey) + 10, (int)(rex) - 10:(int)(rex) + 10] = \\\n",
+    "                frame[(int)(rey) - 10:(int)(rey) + 10, (int)(rex) - 10:(int)(rex) + 10] * \\\n",
     "                (1 - rinnegan_with_alpha[:, :, 3:] / 255.0) + \\\n",
     "                rinnegan_with_alpha[:, :, :3] * (rinnegan_with_alpha[:, :, 3:] / 255.0)\n",
     "\n",
@@ -167,12 +156,12 @@
     "                i +=1\n",
     "\n",
     "\n",
-    "            bandana = cv2.resize(bandana, (100, 60))\n",
+    "            bandana = cv2.resize(bandana, (150, 90))\n",
     "            # Extract alpha channel from sharingan\n",
     "            alpha_channel = bandana[:, :, 3]\n",
     "\n",
     "            # Resize alpha channel to match the resized strawhat\n",
-    "            alpha_channel_resized = cv2.resize(alpha_channel, (100, 60))\n",
+    "            alpha_channel_resized = cv2.resize(alpha_channel, (150, 90))\n",
     "\n",
     "            # Convert alpha channel to 3 channels\n",
     "            alpha_channel_bgr = cv2.cvtColor(alpha_channel_resized, cv2.COLOR_GRAY2BGR)\n",
@@ -182,7 +171,14 @@
     "            bandana_with_alpha = np.concatenate((bandana_bgr, alpha_channel_bgr), axis=2)\n",
     "\n",
     "\n",
-    "            frame[front_position[1]-70:front_position[1]-10, front_position[0]-50:front_position[0]+50] = bandana\n",
+    "            # Ajustar la forma de la porción de frame\n",
+    "            frame_slice = frame[front_position[1]-90:front_position[1]-0, front_position[0]-75:front_position[0]+75]\n",
+    "            frame_slice_resized = cv2.resize(frame_slice, (150, 90))\n",
+    "\n",
+    "            # Operación de combinación\n",
+    "            frame[front_position[1]-90:front_position[1]+0, front_position[0]-75:front_position[0]+75] = \\\n",
+    "                frame_slice_resized * (1 - bandana_with_alpha[:, :, 3:] / 255.0) + \\\n",
+    "                bandana_with_alpha[:, :, :3] * (bandana_with_alpha[:, :, 3:] / 255.0)\n",
     "\n",
     "            \n",
     "    cv2.imshow('Cam', frame)\n",
